--- a/style.css
+++ b/style.css
@@ -4,16 +4,15 @@
     color: #175b71;
 }
 
-body {
-    /* background: radial-gradient(#03A9F4, #c799da); */
-}
-
-h1, h2 {
+h1 {
     margin-top: 20vh;
     font-size: 2em;
 }
+h2 {
+    margin-top: 15vh;
+    font-size: 1.5em;
+}
 
-p {
-    /* 
-     */
+button {
+    font-size: 100%;
 }
