--- a/main.css
+++ b/main.css
@@ -16,3 +16,12 @@ h2 {
 button {
     font-size: 100%;
 }
+
+#explore-button {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    font-size: 2em;
+    border-radius: 0 1em 0 0;
+    padding: 0.25em;
+}
