--- a/main.css
+++ b/main.css
@@ -13,15 +13,25 @@ h2 {
     font-size: 1.5em;
 }
 
+#description-div {
+    padding-left: 3em;
+    padding-right: 3em;
+}
+
 button {
-    font-size: 100%;
+    position: fixed;
+    bottom: 0;
+    padding: 0.25em;
 }
 
 #explore-button {
-    position: fixed;
     left: 0;
-    bottom: 0;
-    font-size: 2em;
-    border-radius: 0 1em 0 0;
-    padding: 0.25em;
+    font-size: 1em;
+    border-radius: 0 1em 0 0; 
+}
+
+#share-button {
+    right: 0;
+    font-size: 1em;
+    border-radius: 1em 0 0 0; 
 }
