--- a/explore.css
+++ b/explore.css
@@ -4,16 +4,19 @@
     color: #6b0983;
 }
 
+body, button {
+    background-color: black;
+}
+
 h1 {
-    margin-top: 10vh;
     font-size: 3em;
     color: #7d227d;
 }
 
 
 iframe {
-    width: 70vw;
-    height: 55vh;
+    width: 60em;
+    height: 35em;
 }
 
 div, span > a {
@@ -25,10 +28,10 @@ button {
     position: fixed;
     bottom: 0;
     padding: 0.25em;
-    background-color: white;
-    border: 0.3em solid #2196F3;
+    border: 0.1em solid #2196F3;
     color: purple;
     font-weight: 600;
+    outline: none;
 }
 
 #explore-button {
@@ -46,3 +49,36 @@ button {
 button > a {
     text-decoration: none;
 }
+
+@media only screen and (max-width: 750px) {
+    div, span, a{
+        margin:0;
+        padding: 0;
+    }
+    h1 {
+        font-size: 2em;
+        color: #7d227d;
+    }
+    iframe {
+        height: 15em;
+        width: 30em;
+    }
+    div, span > a {
+        margin-top: 1em;
+        font-size: 1em;
+    }
+    button {
+        border: 2px solid #2196F3;
+        font-weight: 400;
+    }
+    #explore-button {
+        font-size: 1.2em;
+        padding-right: 0.3em;
+    }
+    
+    #share-button {
+        font-size: 1.2em;
+        padding-left: 0.4em;
+    }
+    
+  }
