--- a/index.css
+++ b/index.css
@@ -1,19 +1,22 @@
-* {
+body, button {
+    background-color: black;
+}
+
+body {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 120%;
-    color: #175b71;
 }
 
-h1 {
-    font-size: 2em;
-}
-h2 {
-    margin-top: 10vh;
-    font-size: 1.5em;
+button {
+    margin-top: 45vh;
+    padding: 0.25em;
+    border: 0.1em solid #2196F3;
+    color: purple;
+    font-weight: 600;
+    outline: none;
 }
 
-#description-div {
-    padding-left: 3em;
-    padding-right: 3em;
+#explore-button {
+    left: 0;
+    font-size: 2.2em;
+    border-radius: 0 1em 0 0; 
 }
