--- a/index.css
+++ b/index.css
@@ -9,15 +9,20 @@ body {
 button {
     margin-top: 45vh;
     padding: 0.25em;
-    border: 0.1em solid #2196F3;
+    border: none;
     color: purple;
     font-weight: 600;
     outline: none;
     box-shadow: 1px 1px 111px purple;
+    font-size: 2.6em;
+    border-radius: 0 1em 0 0;
+    animation-name: example;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
 }
 
-#explore-button {
-    left: 0;
-    font-size: 2.2em;
-    border-radius: 0 1em 0 0; 
+@keyframes example {
+    0%   {box-shadow: 0 0 65px purple, inset 0 0 1px purple;}
+    50%  {box-shadow: 0 0 141px purple, inset 0 0 2px purple;}
+    100% {box-shadow: 0 0 65px purple, inset 0 0 1px purple;}
 }
