--- a/index.css
+++ b/index.css
@@ -6,15 +6,37 @@ body {
     text-align: center;
 }
 
+.title {
+    color: black;
+    text-shadow: 1px 1px 111px purple;
+    font-size: 3em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
+}
+
+#the {
+    font-size: 2em;
+    position: fixed;
+    top: 33vh;
+    left: 41vw;
+}
+
+#ct {
+    position: fixed;
+    top: 53vh;
+    left: 52vw;
+}
+
 button {
     margin-top: 45vh;
     padding: 0.25em;
     border: none;
-    color: purple;
-    font-weight: 600;
+    color: #700470;
     outline: none;
     box-shadow: 1px 1px 111px purple;
     font-size: 2.6em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 0.1em;
     border-radius: 0 1em 0 0;
     animation-name: example;
     animation-duration: 5s;
