--- a/explore.css
+++ b/explore.css
@@ -1,84 +1,68 @@
-* {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #6b0983;
-}
-
 body, button {
     background-color: black;
 }
 
-h1 {
+body {
+    text-align: center;
+    animation-name: xample;
+    animation-duration: 8s;
+    animation-iteration-count: infinite;
+    width: 20em;
+    margin: 0 auto;
+    border-radius: 5em; 
+}
+
+@keyframes xample {
+    0%   {box-shadow: 0 0 1px #807600, inset 0 0 4px #807600;}
+    50%  {box-shadow: 0 0 1px #807600, inset 0 0 11px #807600;}
+    100% {box-shadow: 0 0 1px #807600, inset 0 0 4px #807600;}
+}
+
+#container {
+    margin-top: 20vh;
+    border: 0px solid #090809;
+}
+
+.title {
+    color: black;
+    text-shadow: 1px 1px 111px #008033;
     font-size: 3em;
-    color: #7d227d;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
+    position: relative;
 }
 
-
-iframe {
-    width: 80vw;
-    height: 55vh;
+#the {
+    font-size: 1.5rem;
+    bottom: -30px;
+    left: -48px;
+    z-index: -1;
 }
 
-div, span > a {
-    margin-top: 2em;
-    font-size: 1em;
+#city {
+    bottom: -113px;
+    left: 14px;
+    z-index: -2;
 }
 
 button {
-    position: fixed;
-    bottom: 0;
-    padding: 0.25em;
-    border: 0.1em solid #2196F3;
-    color: purple;
-    font-weight: 600;
+    animation-name: example;
+    animation-duration: 8s;
+    animation-iteration-count: infinite; 
+    background-color: #080101;
+    border: none;
+    border-radius: 1em 1em 0.1em 0.1em;   
+    box-shadow: 1px 1px 111px #807600;
+    color: #807600;
+    font-size: 2.6em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 0.1em;
     outline: none;
+    padding: 0.4em;
 }
 
-#explore-button {
-    left: 0;
-    font-size: 2.2em;
-    border-radius: 0 1em 0 0; 
+@keyframes example {
+    0%   {box-shadow: 0 0 65px #807600, inset 0 0 9px #807600;}
+    50%  {box-shadow: 0 0 141px #807600, inset 0 0 3px #807600;}
+    100% {box-shadow: 0 0 65px #807600, inset 0 0 9px #807600;}
 }
-
-#share-button {
-    right: 0;
-    font-size: 2em;
-    border-radius: 1em 0 0 0; 
-}
-
-button > a {
-    text-decoration: none;
-}
-
-@media only screen and (max-width: 750px) {
-    div, span, a{
-        margin:0;
-        padding: 0;
-    }
-    h1 {
-        font-size: 2em;
-        color: #7d227d;
-    }
-    iframe {
-        height: 15em;
-        width: 30em;
-    }
-    div, span > a {
-        margin-top: 1em;
-        font-size: 1em;
-    }
-    button {
-        border: 2px solid #2196F3;
-        font-weight: 400;
-    }
-    #explore-button {
-        font-size: 1.2em;
-        padding-right: 0.3em;
-    }
-    
-    #share-button {
-        font-size: 1.2em;
-        padding-left: 0.4em;
-    }
-    
-  }
