--- a/index.css
+++ b/index.css
@@ -4,28 +4,17 @@ body, button {
 
 body {
     text-align: center;
-    animation-name: xample;
-    animation-duration: 8s;
-    animation-iteration-count: infinite;
     width: 20em;
     margin: 0 auto;
-    border-radius: 5em; 
-}
-
-@keyframes xample {
-    0%   {box-shadow: 0 0 1px #807600, inset 0 0 4px #807600;}
-    50%  {box-shadow: 0 0 1px #807600, inset 0 0 11px #807600;}
-    100% {box-shadow: 0 0 1px #807600, inset 0 0 4px #807600;}
 }
 
 #container {
     margin-top: 20vh;
-    border: 0px solid #090809;
 }
 
 .title {
     color: black;
-    text-shadow: 1px 1px 111px #008033;
+    text-shadow: 1px 1px 111px purple;
     font-size: 3em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
@@ -46,23 +35,23 @@ body {
 }
 
 button {
-    background: #080101;
-    padding: 0.4em;
+    background: #000000;
+    padding: 0.2em 0.4em;
     border: none;
-    color: #807600;
+    color: purple;
     outline: none;
-    box-shadow: 1px 1px 111px #807600;
+    box-shadow: 1px 1px 111px purple;
     font-size: 2.6em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     letter-spacing: 0.1em;
-    border-radius: 1em 1em 0 0;
+    border-radius: 0 1em 0 0;
     animation-name: example;
     animation-duration: 8s;
     animation-iteration-count: infinite;    
 }
 
 @keyframes example {
-    0%   {box-shadow: 0 0 65px #807600, inset 0 0 9px #807600;}
-    50%  {box-shadow: 0 0 141px #807600, inset 0 0 3px #807600;}
-    100% {box-shadow: 0 0 65px #807600, inset 0 0 9px #807600;}
+    0%   {box-shadow: 0 0 45px purple, inset 0 0 2px purple;}
+    50%  {box-shadow: 0 0 111px purple, inset 0 0 7px purple;}
+    100% {box-shadow: 0 0 45px purple, inset 0 0 2px purple;}
 }
