--- a/index.css
+++ b/index.css
@@ -6,6 +6,14 @@ body, button {
 #container {
     width: 20em;
     margin: 17vh auto;
+    animation-name: fade-in;
+    animation-duration: 20s;
+    animation-iteration-count: 1;
+}
+
+@keyframes fade-in {
+    0%   {opacity: 0;}
+    100% {display: 1;}
 }
 
 .title {
@@ -41,6 +49,7 @@ button {
     letter-spacing: 0.1em;
     border-radius: 0 1em 0 0;
     animation-name: example;
+    animation-delay: 21s;
     animation-duration: 12s;
     animation-iteration-count: infinite;    
 }
