--- a/explore.css
+++ b/explore.css
@@ -1,13 +1,22 @@
-body, button {
-    background-color: black;
-    text-align: center;
-
-}
-
 body {
     animation-name: fade-in;
-    animation-duration: 8s;
+    animation-duration: 12s;
     animation-iteration-count: 1;
+}
+
+body, button {
+    background-color: #000101;
+    text-align: center;
+}
+
+#container {
+    background-color: #000000;
+    border-radius: 9em;
+    box-shadow: 0 0 1em purple;
+    margin: 6vh auto;
+    width: 40em;
+    height: 40em;
+    z-index: 2;
 }
 
 @keyframes fade-in {
@@ -15,63 +24,25 @@ body {
     100% {display: 1;}
 }
 
-#container {
-    animation-name: xample;
-    animation-duration: 8s;
-    animation-iteration-count: infinite;
-    width: 20em;
-    margin: 0 auto;
-    border-radius: 5em; 
-    margin-top: 20vh;    
-}
-
-@keyframes xample {
-    0%   {box-shadow: 0 0 1px #807600, inset 0 0 4px #807600;}
-    50%  {box-shadow: 0 0 1px #807600, inset 0 0 11px #807600;}
-    100% {box-shadow: 0 0 1px #807600, inset 0 0 4px #807600;}
-}
-
-.title {
-    color: black;
-    text-shadow: 1px 1px 111px #008033;
-    font-size: 3em;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: bold;
-    position: relative;
-}
-
-#the {
-    font-size: 1.5rem;
-    bottom: -30px;
-    left: -48px;
-    z-index: -1;
-}
-
-#city {
-    bottom: -113px;
-    left: 14px;
-    z-index: -2;
-}
-
 button {
-    animation-name: example;
-    animation-delay: 5s;
-    animation-duration: 8s;
-    animation-iteration-count: infinite; 
-    background-color: #080101;
+    padding: 0.2em 0.4em;
+    position: relative;
+    bottom: 0em;
     border: none;
-    border-radius: 1em 1em 0.1em 0.1em;   
-    box-shadow: 1px 1px 111px #807600;
-    color: #807600;
-    font-size: 2.6em;
+    color: purple;
+    outline: none;
+    box-shadow: 0 0 0.5em purple, inset 0 0 0.1em purple;
+    font-size: 3.6em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     letter-spacing: 0.1em;
-    outline: none;
-    padding: 0.4em;
+    animation-name: example;
+    animation-delay: 5s;
+    animation-duration: 12s;
+    animation-iteration-count: infinite;
 }
 
 @keyframes example {
-    0%   {box-shadow: 0 0 65px #807600, inset 0 0 9px #807600;}
-    50%  {box-shadow: 0 0 141px #807600, inset 0 0 3px #807600;}
-    100% {box-shadow: 0 0 65px #807600, inset 0 0 9px #807600;}
+    0%   {box-shadow: 0 0 0.5em purple, inset 0 0 0.1em purple;}
+    50%  {box-shadow: 0 0 1.8em purple, inset 0 0 0.3em purple;}
+    100% {box-shadow: 0 0 0.5em purple, inset 0 0 0.1em purple;}
 }
